@@ -10,6 +10,6 @@ EBUILD audacious-plugins-1.5.1-r1.ebuild 3286 RMD160 4935685fc490330ee998e8a56f7
 EBUILD audacious-plugins-1.5.1-r2.ebuild 3455 RMD160 60d8550470ce2b58fbec5c2ec760db40b2263d97 SHA1 69ee3bc64fc23b9d9c0f0ba33ce1d7beab4a2e1e SHA256 eebfa5738a1847fc39420f702174dccaf8de6fe67382d866e694cd007c82dd9e
 EBUILD audacious-plugins-1.5.1-r3.ebuild 3472 RMD160 40f9efc94d28de8f421a46d0de639d38670da4c9 SHA1 d3c83be0b070a0a7d59b9448e8ddee70cb36d00d SHA256 ba1a3a8a0ede52bf24955ee1ef1afc505bbb9cf11356c4180803f7cdcf20cb93
 EBUILD audacious-plugins-1.5.1.ebuild 3063 RMD160 fe68d2922524483c35c5622f2f198ec0aedd639b SHA1 d875c125c2be86004c1ec4aa3615c369fd431eb4 SHA256 8c4a898906decb0153310a8f18d8a322b69be08f2c4f53d25d921fb1adb3a2da
-EBUILD audacious-plugins-2.0.1.ebuild 3358 RMD160 18dbb256296955c2266087c0e51867b82ece6490 SHA1 670b291a39f0ced6eefa8c31f93c23755299560b SHA256 d0a48d67c6e52849c6ed0b6cab2084e5af4c750cd99a8577b474a857ccbb77e7
-MISC ChangeLog 23460 RMD160 68a5f2f9a0a3a87783cc677901bbd04ad2ff2be3 SHA1 1529482b0f78fdeb432d24a834b69efb91123862 SHA256 90824297c800ce2109f6aded8c645e718d8b018c222071232d8974fc29b3b6b8
+EBUILD audacious-plugins-2.0.1.ebuild 3360 RMD160 be607f2c65aa139160db4b1fc39f93ca58829701 SHA1 94d62b9440f7458f2f5a05ecaee433db0428d136 SHA256 37589a3afa7e374a6abf077dd5347f7eab228fde0b81904810dd8a6489e81b39
+MISC ChangeLog 23597 RMD160 be8bbe7923ed36e1d105810f1ef273c7076c0796 SHA1 06ade5d60f3733acff528372151fe0464b894de0 SHA256 62a391e1074dd151875bfa28d4283a7250e6759eb964c9eb2c74da7cbb5be615
 MISC metadata.xml 989 RMD160 34cd575a42e5f6dcef6730596dac482cc05d767d SHA1 7ce5a4440d41f718c9e730125b398d0849195d16 SHA256 4eea12dc5f89167d71f25a441086da86932eac4ac7b0d722342cda05572b19d0
