@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.112 2009/05/14 16:09:28 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.113 2009/05/24 15:43:29 ssuominen Exp $
+
+  24 May 2009; Samuli Suominen <ssuominen@gentoo.org>
+  audacious-plugins-2.0.1.ebuild:
+  Move libcdio behind USE cdaudio wrt #270246.
 
 *audacious-plugins-2.0.1 (14 May 2009)
 
